--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,8 @@
 {
-	"printWidth": 80,
-	"tabWidth": 4,
 	"useTabs": true,
-	"semi": true,
+	"tabWidth": 4,
 	"singleQuote": false,
+	"printWidth": 100,
 	"trailingComma": "es5",
-	"bracketSpacing": true,
-	"arrowParens": "avoid",
-	"endOfLine": "crlf"
+	"semi": true
 }
